# LocalRAG

./: .env.example  Dockerfile  Notes.md  README.md  main.py  main_desktop.py  main_web.py  pyproject.toml  requirements.txt
benchmarks/: README.py  benchmark_utils.py  config.py  config_generation.py  config_rerank.py  config_retrieval.py  data_utils.py  dataset.py  embeddings.py  eval_generation_dragon.py  eval_msmarco2_passages.py  eval_msmarco_chroma.py  eval_msmarco_passages.py  eval_rerank_dragon.py  eval_retrieval_dragon.py  judge.py  metrics.py  rag_pipeline.py  result_utils.py
benchmarks/prompts/: prompt_bench.txt  prompt_ru.txt
config/: old_system_prompt.txt  system_prompt.txt
src/: ChatAgent.py  ChatHistory.py  ChromaAdapter.py  Config.py  CoreApp.py  DocumentProcessor.py  FileUploader.py  FletUI.py  LoginView.py  MainView.py  RAGApp.py  SQLiteAdapter.py  UserManager.py  logger.py
src/entrypoints/: desktop.py  web.py
tests/: draft_test_logging.py  test_batch_process.py  test_document_processor.py  test_document_processor0.py  test_extract_text.py  test_fastembed.py  test_file_uploader.py  test_file_uploader0.py  test_flet_icons.py  test_gpu.py  test_ollama_conn.py  test_ollama_embeddings.py  test_process_docx.py  test_process_odt.py  test_reranking.py
tests/fixtures/: test.docx  test.html  test.odt
tests/test_outputs/: test_jpg_result.txt  test_pdf_full_result.txt  test_pdf_quick_result.txt  test_py_result.txt  test_txt_result.txt
tests/upload/: flet_repo.txt
